--- a/livingExpenseRecord/app/src/main/res/values/strings.xml
+++ b/livingExpenseRecord/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="record_list_item_dateText">Record Date</string>
     <string name="save_record">Save Record</string>
     <string name="record_list_title">Records</string>
+    <string name="empty_text">No data!</string>
 </resources>
