--- a/livingExpenseRecord/app/src/main/res/values/strings.xml
+++ b/livingExpenseRecord/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="save_record">Save Record</string>
     <string name="record_list_title">Records</string>
     <string name="empty_text">No data!</string>
+    <string name="total_month_title">Total</string>
 </resources>
