--- a/livingExpenseRecord/app/src/main/res/values/strings.xml
+++ b/livingExpenseRecord/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="record_list_item_totalTodayText">Record totalToday</string>
     <string name="record_list_item_dateText">Record Date</string>
     <string name="save_record">Save Record</string>
+    <string name="delete_record">Delete Record</string>
     <string name="record_list_title">Records</string>
     <string name="empty_text">No data!</string>
     <string name="total_month_title">Total</string>
