--- a/livingExpenseRecord/app/src/main/res/values/strings.xml
+++ b/livingExpenseRecord/app/src/main/res/values/strings.xml
@@ -6,10 +6,12 @@
     <string name="record_breakfast_label">BREAKFAST</string>
     <string name="record_lunch_label">LUNCH</string>
     <string name="record_dinner_label">DINNER</string>
-    <string name="record_date_label">DATE</string>
+    <string name="custom_record_label">CUSTOM RECORDS</string>
     <string name="record_totalToday_label">TOTAL</string>
     <string name="record_list_item_totalTodayText">Record totalToday</string>
     <string name="record_list_item_dateText">Record Date</string>
+    <string name="custom_record_item_titleText">Title</string>
+    <string name="custom_record_item_costText">cost</string>
     <string name="save_record">Save Record</string>
     <string name="add_custom_record">Add Custom Record</string>
     <string name="delete_record">Delete Record</string>
