--- a/livingExpenseRecord/app/src/main/res/values/strings.xml
+++ b/livingExpenseRecord/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">livingExpenseRecord</string>
-    <string name="record_breakfast_hint">Enter a cost for your breakfast.</string>
-    <string name="record_lunch_hint">Enter a cost for your lunch.</string>
-    <string name="record_dinner_hint">Enter a cost for your dinner.</string>
-    <string name="record_others_hint">Enter a cost for others.</string>
+    <string name="record_breakfast_hint">cost for breakfast.</string>
+    <string name="record_lunch_hint">cost for lunch.</string>
+    <string name="record_dinner_hint">cost for dinner.</string>
+    <string name="record_others_hint">cost for others.</string>
     <string name="record_breakfast_label">BREAKFAST</string>
     <string name="record_lunch_label">LUNCH</string>
     <string name="record_dinner_label">DINNER</string>
@@ -20,4 +20,5 @@
     <string name="title_page0">TODAY</string>
     <string name="title_page1">LIST</string>
     <string name="title_page2">TOTAL</string>
+    <string name="saved_toast">Saved!</string>
 </resources>
