--- a/livingExpenseRecord/app/src/main/res/values/strings.xml
+++ b/livingExpenseRecord/app/src/main/res/values/strings.xml
@@ -1,24 +1,33 @@
 <resources>
-    <string name="app_name">livingExpenseRecord</string>
-    <string name="record_breakfast_hint">cost for breakfast.</string>
-    <string name="record_lunch_hint">cost for lunch.</string>
-    <string name="record_dinner_hint">cost for dinner.</string>
-    <string name="record_others_hint">cost for others.</string>
-    <string name="record_breakfast_label">BREAKFAST</string>
-    <string name="record_lunch_label">LUNCH</string>
-    <string name="record_dinner_label">DINNER</string>
-    <string name="record_others_label">OTHERS</string>
-    <string name="record_totalToday_label">TOTAL</string>
-    <string name="record_list_item_totalTodayText">Record totalToday</string>
-    <string name="record_list_item_dateText">Record Date</string>
-    <string name="save_record">Save Record</string>
-    <string name="delete_record">Delete Record</string>
-    <string name="record_list_title">Records</string>
-    <string name="empty_text">No data!</string>
-    <string name="total_month_title">Total</string>
-    <string name="chart">chart</string>
-    <string name="title_page0">TODAY</string>
-    <string name="title_page1">LIST</string>
-    <string name="title_page2">TOTAL</string>
-    <string name="saved_toast">Saved!</string>
+    <string name="app_name">一日三餐</string>
+    <string name="record_breakfast_hint">早餐消费</string>
+    <string name="record_lunch_hint">午餐消费</string>
+    <string name="record_dinner_hint">晚餐消费</string>
+    <string name="record_others_hint">其它消费</string>
+    <string name="record_breakfast_label">早餐</string>
+    <string name="record_lunch_label">午餐</string>
+    <string name="record_dinner_label">晚餐</string>
+    <string name="record_others_label">其它</string>
+    <string name="record_totalToday_label">总计</string>
+    <string name="record_list_item_totalTodayText">当日总计</string>
+    <string name="record_list_item_dateText">当日日期</string>
+    <string name="save_record">保存</string>
+    <string name="delete_record">删除</string>
+    <string name="record_list_title">记录列表</string>
+    <string name="empty_text">没有记录!</string>
+    <string name="total_month_title">合计</string>
+    <string name="chart">图表</string>
+    <string name="title_page0">今日</string>
+    <string name="title_page1">列表</string>
+    <string name="title_page2">合计</string>
+    <string name="saved_toast">已保存!</string>
+    <string name="user">彭侦</string>
+    <string name="navi_item0">本月消费图表</string>
+    <string name="navi_item1">10月消费图表</string>
+    <string name="navi_item2">9月消费图表</string>
+    <string name="navi_item3">8月消费图表</string>
+    <string name="setting">设置</string>
+    <string name="theme">主题</string>
+    <string name="background">背景</string>
+    <string name="animation">切换效果</string>
 </resources>
