synchronised the pageTransformer between RecordActivity and finalRecordActivity

--- a/livingExpenseRecord/app/src/main/res/values/strings.xml
+++ b/livingExpenseRecord/app/src/main/res/values/strings.xml
@@ -36,13 +36,13 @@
     <string name="animation_dialog_ok">确认</string>
     <string-array name="translation_effect">
         <item>推压</item>
-        <item>立方内转</item>
-        <item>立方外转</item>
+        <item>内转</item>
+        <item>外转</item>
         <item>景深</item>
-        <item>水平翻转</item>
-        <item>竖直翻转</item>
-        <item>顺时针旋转</item>
-        <item>逆时针旋转</item>
+        <item>平翻</item>
+        <item>竖翻</item>
+        <item>顺旋</item>
+        <item>逆旋</item>
         <item>拉进</item>
         <item>标准</item>
         <item>方块</item>
