--- a/livingExpenseRecord/app/src/main/res/values/strings.xml
+++ b/livingExpenseRecord/app/src/main/res/values/strings.xml
@@ -1,4 +1,19 @@
 <resources>
+    <string-array name="translation_effect">
+        <item>推压</item>
+        <item>内转</item>
+        <item>外转</item>
+        <item>景深</item>
+        <item>平翻</item>
+        <item>竖翻</item>
+        <item>顺旋</item>
+        <item>逆旋</item>
+        <item>拉进</item>
+        <item>标准</item>
+        <item>方块</item>
+        <item>放大</item>
+        <item>缩小</item>
+    </string-array>
     <string name="app_name">一日三餐</string>
     <string name="record_breakfast_hint">早餐消费</string>
     <string name="record_lunch_hint">午餐消费</string>
@@ -34,19 +49,7 @@
     <string name="navi_close">closed</string>
     <string name="animation_dialog_cancel">取消</string>
     <string name="animation_dialog_ok">确认</string>
-    <string-array name="translation_effect">
-        <item>推压</item>
-        <item>内转</item>
-        <item>外转</item>
-        <item>景深</item>
-        <item>平翻</item>
-        <item>竖翻</item>
-        <item>顺旋</item>
-        <item>逆旋</item>
-        <item>拉进</item>
-        <item>标准</item>
-        <item>方块</item>
-        <item>放大</item>
-        <item>缩小</item>
-    </string-array>
+    <string name="swipe_image">删除图标</string>
+    <string name="swipe_text">删除记录？</string>
+    <string name="swipe_button">删除</string>
 </resources>
